Fixed the navigation stacking with hacky z-index, made the slideout  menu work properly, tweaked a bunch of other little stuff.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -98,7 +98,9 @@ a {
 
     &:hover {
         color: $text-color;
-        text-decoration: underline;
+        text-decoration: none;
+        background: rgba($grey-color-light,0.5);
+        outline: 5px rgba($grey-color-light,0.5);
     }
 }
 
