--- a/_sass/sections/_about.scss
+++ b/_sass/sections/_about.scss
@@ -5,9 +5,10 @@ img.face {
 	width: 40%;
 	box-sizing: border-box;
 	padding: 10px;
+	margin-left: 8px;
 	margin-bottom: $padding-default;
 	border-radius: 50%;
-	border: 4px solid $grey-color;
+	border: 4px solid $grey-color-light;
 
 	@media screen and ( max-width: $on-tablet ) {
 
@@ -47,6 +48,13 @@ ul.skills {
 	width: 50%;
 	float: left;
 
+	@media screen and ( max-width: $on-tablet ) {
+
+		float: none;
+		width: 100%;
+
+	}
+
 	li {
 		position: relative;
 		display: block;
@@ -72,7 +80,6 @@ ul.skills {
 
 		div.title {
 			position: absolute;
-			z-index: 2;
 			top: 0;
 			left: 0;
 			padding: 0 10px;
@@ -80,7 +87,6 @@ ul.skills {
 
 		div.bar {
 
-			z-index: 1;
 			height: 100%;
 			width: 0;
 			background-color: rgba(0,0,0,0.5);
