--- a/_sass/sections/_contact.scss
+++ b/_sass/sections/_contact.scss
@@ -45,7 +45,6 @@ form {
 
 	.input-group {
 
-		position: relative;
 		width: 50%;
 		float: left;
 
